--- a/styles/style.css
+++ b/styles/style.css
@@ -18,6 +18,10 @@
     flex-shrink: 0;
     border-radius: 13px;
     display: flex;
+    background-color: rgba(7, 2, 17, 0.00);
+
+1x
+
 }
 
 .banner .banner-text {
