--- a/styles/style.css
+++ b/styles/style.css
@@ -140,3 +140,33 @@
     line-height: normal;
     text-transform: uppercase;
 }
+
+#schedule .time {
+    text-align: center;
+    margin-top: 120px;
+    background-color: rgba(247, 138, 138, 0.11);
+}
+
+.container #schedule .schedule-text {
+    font-family: Inter;
+    font-size: 25px;
+    text-align: center;
+}
+
+span {
+    color: #F00;
+    font-family: Inter;
+    font-size: 25px;
+    text-transform: capitalize;
+}
+
+.button {
+    color: #FFF;
+    border-radius: 8px;
+    padding: 15px 28px;
+    background: rgb(236, 52, 28);
+    font-size: 16px;
+    width: 103px;
+    height: 20px ;
+    text-transform: uppercase;
+}
